LPS-108474 Fixes spacing problems

--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-form-renderer/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-form-renderer/src/main/resources/META-INF/resources/css/main.scss
@@ -578,4 +578,5 @@ p.ddm-label {
 p .reference-mark {
 	color: #b95000;
 	font-size: 6px;
+	margin-left: 4px;
 }
